Fix user list scroll area expanding behind the message input on mobile

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -979,6 +979,7 @@ kbd {
 	display: flex;
 	flex-grow: 1;
 	overflow: hidden;
+	position: relative;
 }
 
 #chat .chat {
